--- a/oss-svr/tests/TestPlayVideo.html
+++ b/oss-svr/tests/TestPlayVideo.html
@@ -1,5 +1,6 @@
 <!--在前端页面中使用video标签播放-->
 <video width="400" height="300" controls>
-    <source src="http://127.0.0.1:9840/oss/obj/preview/173304086265856.mp4" type="video/mp4">
+<!--    <source src="http://127.0.0.1:9840/oss/obj/preview/173304086265856.mp4" type="video/mp4">-->
+    <source src="http://lhlj-weighbridge:40312/live/01.live.flv?vhost=__defaultVhost__" type="video/flv">
     您的浏览器不支持HTML5视频播放
 </video>
